# FastApi

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-package-conda.yml
config/: Enums.py  base_db.py  database.py
config/templates/: button_styles.css
core/: config.py
core/authenticator/: jwt_bearer.py  jwt_manager.py  role_checker.py
core/models/: booking_model.py  product_store_model.py  products_model.py  role_model.py  status_model.py  user_model.py
core/routers/: auth_router.py  booking_router.py  product_router.py  product_store_router.py  user_router.py
core/schema/: booking_dto.py  product_dto.py  product_store_dto.py  user_dto.py
core/services/: booking_service.py  product_service.py  product_store_service.py  role_service.py  status_service.py  user_service.py
core/web_ui/: common_components.py  home_page.py  login_page.py
test/conftest/: mocks_apis.py  mocks_services.py
test/unit/: auth_test.py  booking_test.py  product_store_test.py  product_test.py  user_test.py
test/web_api/: api_e2e.py  booking_test_api.py  product_test_api.py  store_test_api.py  user_test_api.py
